--- a/config.json
+++ b/config.json
@@ -4,6 +4,5 @@
   "modelPropertyNaming": "camelCase",
   "paramNaming": "camelCase",
   "supportsES6": true,
-  "withInterfaces": true,
-  "withoutRuntimeChecks": true
+  "withInterfaces": true
 }
